--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 #Server database connection Code
-#spring.datasource.url=jdbc:mysql://5.100.155.93/swadhuno_googlemaprestapi?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false	
-#spring.datasource.username=swadhuno_gmrstap
-#spring.datasource.password=NWRXDW#K*ORv
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://5.100.155.93/swadhuno_googlemaprestapi?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false	
+spring.datasource.username=swadhuno_gmrstap
+spring.datasource.password=NWRXDW#K*ORv
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ##Local database connection code
-spring.datasource.url=jdbc:mysql://localhost/googlemaprestapi?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false	
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost/googlemaprestapi?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false	
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
 
 spring.jpa.hibernate.ddl-auto=none
-
+#server.error.include-message=always
 logging.level.org.hibernate.SQL=Debug
 logging.level.org.hibernate.type=Trace
 
