--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.username=root
 #spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
+#
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
 
 spring.jpa.hibernate.ddl-auto=none
 #server.error.include-message=always
