implementing logout api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,6 +50,7 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # App Properties
+bezkoder.app.jwtCookieName= bezkoder
 app.jwtSecret= bezKoderSecretKey
 app.jwtExpirationMs= 86400000
 
